# media-seal

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_EN.md  build-linux.spec  build.spec  main.py  pyproject.toml  setup.py  test_basic.py
.github/workflows/: build.yml
examples/: demo.py
watermark/: __init__.py  audio_watermark.py  image_watermark.py  video_watermark.py
