[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-seal"
version = "0.1.0"
description = "Digital watermarking tool for images, audio and video"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Media Seal Developer"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.16.0",
    "rich>=13.0.0",
    # 图像处理
    "opencv-python>=4.5.0",
    "numpy>=1.21.0,<2.0.0",
    "pillow>=8.0.0",
    # 水印库
    "invisible-watermark>=0.1.5",
    "blind-watermark>=0.2.1",
    # 音频处理 - 兼容Python 3.11+的版本
    "librosa>=0.9.2,<0.11.0",
    "pydub>=0.25.1",
    "scipy>=1.9.0,<1.12.0",
    "soundfile>=0.12.1",
    "audioread>=3.0.0",
    "numba>=0.58.0,<0.60.0",
    # 视频处理
    "imageio[ffmpeg]>=2.9.0",
    "moviepy>=1.0.3",
    # 工具库
    "tqdm>=4.64.0",
    "PyWavelets>=1.3.0",
]

[project.scripts]
media-seal = "main:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.12.4",
    "pyinstaller>=5.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Hatchling build configuration
[tool.hatch.build.targets.wheel]
packages = ["watermark"]
include = [
    "main.py",
    "watermark/",
    "examples/",
    "README.md",
    "QUICKSTART.md",
]

# UV configuration
[tool.uv]
package = true
dev-dependencies = [
    "ruff>=0.12.4",
    "pyinstaller>=5.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# 解决依赖冲突
resolution = "highest"
prerelease = "disallow"
override-dependencies = [
    "numba>=0.58.0,<0.60.0",
    "llvmlite>=0.41.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "C", "I", "N", "UP", "B", "A"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["media_seal", "watermark"]
